--- a/django_blog/blog/templates/blog/base.html
+++ b/django_blog/blog/templates/blog/base.html
@@ -11,10 +11,10 @@
     <header>
         <nav>
             <ul>
-                {% comment %} <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="{% url 'posts' %}">Blog Posts</a></li> {% endcomment %}
-                <li><a href="{% url 'login' %}">Login</a></li>
-                <li><a href="{% url 'register' %}">Register</a></li>
+                {% comment %} <li><a href="{% url 'blog:post_list' %}">Home</a></li> {% endcomment %}
+                <li><a href="{% url 'blog:post_list' %}">Blog Posts</a></li> 
+                <li><a href="{% url 'blog:login' %}">Login</a></li>
+                <li><a href="{% url 'blog:register' %}">Register</a></li>
             </ul>
         </nav>
     </header>
